--- a/vue.html
+++ b/vue.html
@@ -8,12 +8,11 @@
 </head>
 <body>
    <div id="app">
-       <p>{{counter}}</p>
-       
+       <p>{{counter}}</p>      
    </div> 
 
-   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-   <!-- <script src="Vue.js"></script> -->
+   <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+   <script src="Vue.js"></script>
    <script>
        const app=new Vue({
         el:'#app',
